--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
   background-color: var(--main-background-color);
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
-  max-width: 1040px;
+  max-width: max-content;
 }
 
 * Fonts for headers */
@@ -122,7 +122,7 @@ ul {
     color: var(--primary-text-color);
     text-align: center;
   }
-  .header-link {
+  .contacts-item {
     text-align: right;
   }
 
